<resources>
    <string name="app_name">Projeto1</string>
    <string name="lista_de_frases">Lista de Frases</string>
    <string name="bom_dia">Bom Dia</string>
    <string name="boa_noite">Boa Noite</string>
    <string name="agua">Água</string>
    <string name="comida">Comida</string>
    <string name="dormir">Dormir</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum et lectus tempus, tincidunt nibh et, fermentum nisi. Integer at velit accumsan, vestibulum dolor sed, vulputate dui. Etiam lacinia luctus fringilla. Curabitur neque felis, maximus commodo ipsum ac, ultrices eleifend lacus. Cras et suscipit lacus, sit amet blandit leo. Praesent cursus neque ut ipsum bibendum facilisis. Mauris diam magna, ultricies eget quam et, auctor consequat risus. Maecenas dignissim mauris at placerat pharetra. Integer congue sit amet nibh nec pharetra. Praesent fringilla, sem eget viverra congue, mauris mauris placerat est, a ultricies lacus est eget orci. Vestibulum et dictum sapien, eu lobortis elit. Mauris egestas sit amet ex egestas laoreet. Maecenas pretium pulvinar lorem, eget consequat elit ornare eu. Ut tristique tellus viverra convallis accumsan. In hac habitasse platea dictumst. Morbi porttitor elementum sodales. Cras ut tincidunt leo, in lacinia purus. Duis a sodales ipsum, pharetra imperdiet est. In ex turpis, laoreet quis felis eu, faucibus scelerisque mauris. Praesent tristique viverra odio vel interdum. Pellentesque ultricies pretium gravida. Morbi at mauris vel nunc mattis hendrerit. In iaculis elit scelerisque diam lacinia pretium. Donec gravida, justo et consectetur tempor, ipsum ligula eleifend ligula, eu luctus erat ex ut orci. Vivamus a nisi massa. Etiam ultricies ligula in nibh lobortis, sit amet imperdiet risus maximus. In laoreet blandit nibh a placerat. Quisque at finibus sem. Aliquam erat volutpat. Curabitur malesuada posuere mauris, id lacinia risus venenatis at. Curabitur volutpat quis tortor vel malesuada. Nam rhoncus nibh sit amet mi euismod tristique. Mauris nec ex vitae lectus convallis eleifend. Quisque odio quam, blandit ut accumsan in, consectetur ut turpis. Nulla eget nisl eu quam volutpat tincidunt. Aenean sit amet lacus non nulla tempus sodales vel et tortor. Vestibulum a eros a tellus dignissim varius facilisis ac nisi. Nullam eget tempus tortor, quis rutrum eros. Cras at augue eget ipsum sodales ullamcorper. Duis at nisl rhoncus, dignissim arcu nec, lobortis enim. Etiam suscipit faucibus libero, vel pretium libero finibus non. Donec lorem enim, consectetur in consectetur at, dictum vel elit. Mauris interdum vestibulum interdum. Sed malesuada felis est, a tempus enim luctus id. Morbi aliquet vitae enim at tristique. Sed id urna non tortor auctor ultrices. Nulla scelerisque sapien et libero dapibus pellentesque sit amet a elit. Pellentesque semper, nibh quis vehicula viverra, mauris quam pharetra sem, sit amet auctor magna velit ac justo. Mauris et elementum purus, eu mattis diam. Duis pellentesque dapibus pretium. Sed in lacus ut nibh tincidunt porta vel a enim. Quisque porttitor euismod venenatis. Aliquam euismod cursus purus, at auctor velit. Mauris imperdiet tortor eros, id viverra est ultricies non. Maecenas volutpat eleifend sapien sed maximus. Donec vel interdum massa. Nulla iaculis pretium risus, in posuere ligula auctor eu. Phasellus dictum lectus volutpat arcu aliquet, non dignissim sapien finibus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vivamus a pharetra sapien. Duis commodo egestas dictum. Suspendisse gravida eros nec turpis consequat, non posuere elit elementum. In lacinia, lacus sit amet sagittis feugiat, lectus quam molestie mi, ac gravida ipsum nisl ut augue. Integer eu venenatis dui. Duis a nibh turpis. Nulla ante lacus, varius a est in, mollis viverra dolor. Phasellus dictum nisi in aliquet interdum. Suspendisse tellus sapien, tempus ac luctus quis, pulvinar sit amet nulla. Nam iaculis, est pellentesque iaculis posuere, massa augue varius ex, vulputate convallis erat odio in urna. Ut eget lectus leo. Nunc placerat, risus sed vulputate tristique, est sem euismod enim, in semper erat diam a arcu. Nunc at ante vehicula, accumsan arcu ac, efficitur urna. Sed pretium elit tincidunt turpis interdum, eu cursus lorem molestie. Phasellus eu vulputate lectus. Donec id nulla dictum, convallis neque vitae, dignissim sapien. Proin at viverra ligula, varius fringilla diam. Etiam vulputate quis quam nec maximus. Curabitur vel mauris a mauris hendrerit egestas. Nullam a orci vitae velit bibendum egestas. Sed luctus dui lacus.</string>
  
</resources>
