<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MessageActivity">


    <TextView
        android:id="@+id/text_lista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:paddingTop="10sp"
        android:text="Mensagem"
        android:textColor="#000"
        android:textSize="25sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="330sp"
        android:layout_marginTop="15sp"
        android:layout_marginBottom="10sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_mostrado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text=""
                android:textColor="#000"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/button_goMainActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10sp"
            android:paddingVertical="30sp"
            android:text="Morse" />

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true">

            <LinearLayout
                android:id="@+id/layout_botoes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="110sp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button_boa_noite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:paddingVertical="20dp"
                    android:text="@string/boa_noite"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/button_bom_dia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:paddingVertical="20dp"
                    android:text="@string/bom_dia"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/buttom_agua"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:paddingVertical="20dp"
                    android:text="@string/agua"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/buttom_comida"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:paddingVertical="20dp"
                    android:text="@string/comida"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/buttom_dormir"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:paddingVertical="20dp"
                    android:text="@string/dormir"
                    android:textSize="20sp" />
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</LinearLayout>